--- a/AnsibleWorkflow/delete_posts/delete_contract.j2
+++ b/AnsibleWorkflow/delete_posts/delete_contract.j2
@@ -1,8 +1,2 @@
-<fvAp dn="uni/tn-{{tenant_name}}/ap-{{appProfile_name}}" name="{{appProfile_name}}" prio="unspecified">
-   <fvAEPg floodOnEncap="disabled"isAttrBasedEPg="no" matchT="AtleastOne" name="{{providerEPG_name}}" pcEnfPref="unenforced" prefGrMemb="exclude" prio="unspecified">
-      <fvRsProv matchT="AtleastOne" prio="unspecified" tnVzBrCPName="{{contract_name}}" status="deleted"/>
-   </fvAEPg>
-   <fvAEPg floodOnEncap="disabled" isAttrBasedEPg="no" matchT="AtleastOne" name="{{consumerEPG_name}}" pcEnfPref="unenforced" prefGrMemb="exclude" prio="unspecified">
-      <fvRsCons prio="unspecified" tnVzBrCPName="{{contract_name}}" status="deleted"/>
-   </fvAEPg>
-</fvAp>
+<vzBrCP dn="uni/tn-{{tenant_name}}/brc-{{contract_name}}" name="{{contract_name}}" prio="unspecified" status="deleted" scope="context" targetDscp="unspecified">
+</vzBrCP>
