--- a/AnsibleWorkflow/delete_posts/delete_ldev.j2
+++ b/AnsibleWorkflow/delete_posts/delete_ldev.j2
@@ -1,2 +1,9 @@
-<vnsLDevVip contextAware="single-Context" devtype="{{device_type}}" dn="uni/tn-{{tenant_name}}/lDevVip-{{logicalDeviceCluster_name}}" funcType="GoTo" isCopy="no" managed="no" mode="legacy-Mode" name="{{logicalDeviceCluster_name}}" promMode="no" svcType="ADC" trunking="no" status="deleted">
+{% if device_type=='physical' %}
+<vnsLDevVip contextAware="single-Context" devtype="PHYSICAL" dn="uni/tn-{{tenant_name}}/lDevVip-{{logicalDeviceCluster_name}}" funcType="GoTo" isCopy="no" managed="no" mode="legacy-Mode" name="{{logicalDeviceCluster_name}}" promMode="no" svcType="ADC" trunking="no" status="deleted">
 </vnsLDevVip>
+{% endif %}
+
+{% if device_type=='virtual' %}
+<vnsLDevVip contextAware="single-Context" devtype="VIRTUAL" dn="uni/tn-{{tenant_name}}/lDevVip-{{logicalDeviceCluster_name}}" funcType="GoTo" isCopy="no" managed="no" mode="legacy-Mode" name="{{logicalDeviceCluster_name}}" promMode="no" svcType="ADC" trunking="no" status="deleted">
+</vnsLDevVip>
+{% endif %}
