--- a/AppCenter-dcloud-workingdraft/ansible_playbooks/delete_network.j2
+++ b/AppCenter-dcloud-workingdraft/ansible_playbooks/delete_network.j2
@@ -1,5 +1,5 @@
 {
-  "url": "{{apic_ip}}",
+  "url": "{{big_ip}}",
   "ldev": "uni/tn-{{tenant_name}}/lDevVip-{{ldev_name}}",
   "devtype": "VIRTUAL",
   "vlans": [
